<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/tv_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MobiWardrobe"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_gravity="start"/>

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_face_retouching_natural_24"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/iv_go_to_favorites"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_baseline_favorite_white_24"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"/>

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/gradient_wall">

    </FrameLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bottom_nav_background"
            app:menu="@menu/bottom_nav_menu" />
    </com.google.android.material.bottomappbar.BottomAppBar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_anchor="@+id/fab_add"
        app:layout_anchorGravity="top|center">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_clothes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/description_plus"
            android:src="@drawable/ic_t_shirt"
            app:backgroundTint="?attr/colorPrimary"
            app:fabSize="mini"
            app:rippleColor="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_outfit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="110dp"
            android:contentDescription="@string/description_plus"
            android:src="@drawable/ic_clothes"
            app:backgroundTint="?attr/colorPrimary"
            app:fabSize="mini"
            app:rippleColor="@color/white" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_plus"
        android:src="@drawable/ic_baseline_add_24"
        app:rippleColor="@color/white"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_anchor="@id/bottomAppBar" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>


