...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_wall"
    android:orientation="vertical"
    tools:context=".outfitupload.CreateOutfitActivity"
    android:id="@+id/create_outfit_activity_layout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_outfit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
...
