<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_weather"
        android:icon="@drawable/ic_baseline_wb_sunny_24"
        android:title="@string/title_item_weather" />

    <item
        android:id="@+id/item_outfit"
        android:icon="@drawable/ic_clothes"
        android:title="@string/title_item_outfit" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/item_clothes"
        android:icon="@drawable/ic_t_shirt"
        android:title="@string/title_item_clothes" />

    <item
        android:id="@+id/item_calendar"
        android:icon="@drawable/ic_outline_calendar_month_24"
        android:title="@string/title_item_calendar" />

</menu>